--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react-native": "0.72.6",
     "react-native-paper": "^5.11.7",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-native-wifi-reborn": "^4.10.1",
+    "expo-network": "~5.4.0",
+    "@react-native-community/netinfo": "9.3.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
