--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-wifi-reborn": "^4.10.1",
     "expo-network": "~5.4.0",
-    "@react-native-community/netinfo": "9.3.10"
+    "@react-native-community/netinfo": "9.3.10",
+    "expo-location": "~16.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
