--- a/app.json
+++ b/app.json
@@ -25,6 +25,7 @@
         "web": {
             "favicon": "./assets/favicon.png"
         },
-        "plugins": ["react-native-wifi-reborn"]
+        "plugins": ["react-native-wifi-reborn"],
+        "scheme": "iot"
     }
 }
