--- a/package.json
+++ b/package.json
@@ -9,20 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "9.3.10",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@tanstack/react-query": "^5.17.9",
+    "axios": "^1.6.5",
     "expo": "~49.0.15",
+    "expo-auth-session": "~5.0.2",
+    "expo-crypto": "~12.4.1",
+    "expo-location": "~16.1.0",
+    "expo-network": "~5.4.0",
+    "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
+    "i": "^0.3.7",
+    "npm": "^10.3.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^5.11.7",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-wifi-reborn": "^4.10.1",
-    "expo-network": "~5.4.0",
-    "@react-native-community/netinfo": "9.3.10",
-    "expo-location": "~16.1.0"
+    "react-native-wifi-reborn": "^4.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
