--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -21,11 +21,15 @@
     "expo-location": "~16.1.0",
     "expo-network": "~5.4.0",
     "expo-secure-store": "~12.3.1",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "i": "^0.3.7",
     "npm": "^10.3.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-aes-crypto": "^3.0.1",
+    "react-native-ble-manager": "^11.2.0",
+    "react-native-ble-plx": "^3.1.2",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^5.11.7",
     "react-native-safe-area-context": "4.6.3",
