--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@tanstack/react-query": "^5.17.12",
+    "@types/jsonwebtoken": "^9.0.5",
     "axios": "^1.6.5",
     "expo": "~49.0.15",
     "expo-auth-session": "~5.0.2",
@@ -24,6 +25,7 @@
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "i": "^0.3.7",
+    "jsonwebtoken": "^9.0.2",
     "npm": "^10.3.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
@@ -32,6 +34,7 @@
     "react-native-ble-plx": "^3.1.2",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^5.11.7",
+    "react-native-pure-jwt": "^3.0.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-wifi-reborn": "^4.10.1"
