--- a/apiConfig.json
+++ b/apiConfig.json
@@ -1,5 +1,5 @@
 {
-    "apiUrl": "https://iot-api-v2.azurewebsites.net/api/v1/",
+    "apiUrl": "https://a2.listamc.pl/api/v1/",
     "accessTokenKey": "iot_at",
     "refreshTokenKey": "iot_rt",
     "aes_key": "[verysecretaeskey256aaaaaaaaaaa]",
